--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link href="index.css" ref="stylesheet">
+        <link href="index.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Gaegu|Roboto" rel="stylesheet">
         <title>Sweet Eats Bakery</title>
     </head>
     <body>
+    <div class="container">
         <header>
             <h1>Sweet Eats Bakery</h1>
-            <nav>
+            <nav class="content-row">
                 <a href="">About</a>
                 <a href="">Cookies</a>
                 <a href="">Weddings</a>
@@ -18,7 +19,8 @@
                 <a href="">Contact</a>
             </nav>
         </header>
-        <section>
+    </div>        
+        <section class="about">
             <img src="https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png" />
             <h2>About Sweet Eats Bakery</h2>
             <p>Marzipan jelly-o macaroon I love macaroon jujubes. Candy candy canes jujubes I love ice cream croissant. Lollipop
@@ -44,7 +46,7 @@
             <p>Sweet jelly-o apple pie powder jelly beans. Pastry sweet roll cake jujubes halvah soufflé brownie. Toffee cookie
             lemondrops jelly beans chocolate bar. Wafer muffin jujubes danish tart danish chocolate wafer.</p>
         </section>
-        <section>
+        <section class="contact-section">
             <h2>Contact</h2>
             <address>
                 <p>yum@sweeteatsbakery.com
@@ -54,6 +56,7 @@
             </address>
         </section>
         <footer>
+            <div class="footer-content">
             <h3>Sweet Eats Bakery</h3>
             <nav>
                 <a href="">About</a>
@@ -63,6 +66,7 @@
                 <a href="">Contact</a>  
             </nav>
             <p>Copyright Sweet Eats 2018</p>
+            </div>
         </footer>
     </body>
 </html>
